[package]
name = "practice"
version = "0.1.0"
authors = ["zrma <bulbitain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
csv = "1.2.1"
reqwest = { version = "0.11.17", features = ["blocking", "json"] }
tokio = { version = "1.28.0", features = ["full"] }
