[package]
name = "practice"
version = "0.1.0"
authors = ["zrma <bulbitain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.3"
csv = "1.3.1"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
tokio = { version = "1.41.1", features = ["full"] }
rayon = "1.10.0"
wiremock = "0.6.2"
